// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status view when hidden should match snapshot 1`] = `
<div
  className="heatmap-svg__status"
  style={
    Object {
      "right": 50,
      "top": 100,
      "visibility": "hidden",
    }
  }
>
  <Button
    className={null}
    disabled={false}
    onClick={[Function]}
    type="default"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            192,
            512,
            Array [],
            "f142",
            "M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z",
          ],
          "iconName": "ellipsis-v",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
  </Button>
  <Options
    canTranslate={true}
    download={[Function]}
    expand={true}
    fixLeft={true}
    reset={[Function]}
    selectionBoxActive={true}
    showSelectionToggle={true}
    toggleSelectionBox={[Function]}
    toggleTooltips={[Function]}
    tooltipsActive={true}
    translate={[Function]}
  />
</div>
`;

exports[`Status view when visible should match snapshot 1`] = `
<div
  className="heatmap-svg__status"
  style={
    Object {
      "right": 50,
      "top": 100,
      "visibility": "visible",
    }
  }
>
  <Button
    className={null}
    disabled={false}
    onClick={[Function]}
    type="default"
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            192,
            512,
            Array [],
            "f142",
            "M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z",
          ],
          "iconName": "ellipsis-v",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      symbol={false}
      transform={null}
    />
  </Button>
  <Options
    canTranslate={true}
    download={[Function]}
    expand={true}
    fixLeft={true}
    reset={[Function]}
    selectionBoxActive={true}
    showSelectionToggle={true}
    toggleSelectionBox={[Function]}
    toggleTooltips={[Function]}
    tooltipsActive={true}
    translate={[Function]}
  />
</div>
`;
